# log-mcp-server

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
config/: loki-config.yaml
docker/: README.md
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.example.yaml  ingress.example.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  service.yaml
openspec/: project.md
openspec/changes/add-docker-deployment/: design.md  proposal.md  tasks.md
openspec/changes/add-docker-deployment/specs/mcp-server/: spec.md
openspec/changes/add-sse-server/: design.md  proposal.md  tasks.md
openspec/changes/add-sse-server/specs/mcp-server/: spec.md
openspec/changes/archive/2025-10-24-rewrite-to-python/: proposal.md  tasks.md
openspec/changes/archive/2025-10-24-rewrite-to-python/specs/mcp-server/: spec.md
openspec/changes/refactor-to-fastmcp/: design.md  proposal.md  tasks.md
openspec/changes/refactor-to-fastmcp/specs/mcp-server/: spec.md
openspec/changes/rewrite-to-python/: design.md  tasks.md
openspec/specs/mcp-server/: spec.md
scripts/: build.ps1  build.sh  dev-env.ps1
skills/log-query/: SKILL.md
src/log_mcp_server/: __init__.py  auth_context.py  config.py  main.py
src/log_mcp_server/backends/: __init__.py  base.py  factory.py  fanout.py  health_cache.py
src/log_mcp_server/backends/loki/: __init__.py  auth.py  backend.py  http_client.py
src/log_mcp_server/downloads/: __init__.py  registry.py  writer.py
src/log_mcp_server/tools/: __init__.py  log_tools.py
src/log_mcp_server/utils/: __init__.py  errors.py  logging.py  time_utils.py
src/loki_mcp_server/: __init__.py  config.py  main.py
src/loki_mcp_server/client/: __init__.py  auth.py  http_client.py  loki_client.py
src/loki_mcp_server/server/: __init__.py  base_server.py  factory.py  http_server.py  sse_server.py  stdio_server.py
src/loki_mcp_server/tools/: __init__.py  fastmcp_tools.py  health_check.py  labels.py  loki_tools.py  query.py  tenants.py
src/loki_mcp_server/utils/: __init__.py  errors.py  logging.py
tests/: __init__.py  conftest.py  test_auth_context.py  test_config.py  test_download_registry.py  test_download_route.py  test_download_tool.py  test_download_writer.py  test_factory_and_transport.py  test_fanout.py  test_health_cache.py  test_loki_backend.py  test_loki_client.py  test_time_utils.py  test_tools.py
